feat: Add scripts to manage EKS infrastructure
- Created `start-infra.sh` to start the EKS infrastructure, configure kubectl, scale node groups, and deployments.
- Created `stop-infra.sh` to stop the EKS infrastructure, scale down deployments, and provide cost-saving estimates.

chore: Configure Terraform backend

- Added `backend.tf` to configure S3 backend for Terraform state management.

feat: Define EKS resources in Terraform

- Added `eks-ec2-nodes.tf.backup` to define security groups, EKS cluster, and node groups.
- Added `eks-fargate.tf` to configure Fargate profiles and related resources.
- Created `iam.tf` to define IAM roles and policies for EKS cluster and node groups.
- Created `main.tf` to set up provider configurations and Kubernetes namespace.
- Added `outputs.tf` to define outputs for EKS cluster and node group information.
- Created `terraform.tfvars.example` to provide an example configuration for Terraform variables.
- Added `variables.tf` to define all necessary variables for the Terraform configuration.
- Created `versions.tf` to specify required Terraform and provider versions.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,19 @@
 *.userosscache
 *.sln.docstates
 *.env
+!.env.example
+
+# Terraform
+*.tfstate
+*.tfstate.*
+*.tfvars
+!terraform.tfvars.example
+.terraform/
+.terraform.lock.hcl
+
+# Kubernetes secrets
+*secret*.yaml
+!secret.yaml.example
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
