feat: Update API image references to use the new repository for smart mechanical workshop

--- a/.env.example
+++ b/.env.example
@@ -16,4 +16,4 @@ VPC_ID=vpc-xxxxxxxxxxxxx
 SUBNET_IDS=["subnet-xxxxxxxxxxxxx","subnet-yyyyyyyyyyyyy"]
 
 # Application Configuration
-API_IMAGE=ghcr.io/fiap-soat-net/fiap-soat-oficina-mecanica:latest
+API_IMAGE=igortessaro/smart-mechanical-workshop-api:latest
