--- a/k8s/api/configmap.yaml
+++ b/k8s/api/configmap.yaml
@@ -19,3 +19,10 @@ data:
   Jwt__Issuer: "SmartWorkshop"
   Jwt__Audience: "SmartWorkshopUsers"
   Jwt__ExpiresInMinutes: "60"
+  # New Relic Configuration
+  NewRelic__Enabled: "true"
+  NewRelic__AppName: "smart-mechanical-workshop-api"
+  NEW_RELIC_APP_NAME: "smart-mechanical-workshop-api"
+  NEW_RELIC_DISTRIBUTED_TRACING_ENABLED: "true"
+  NEW_RELIC_LOG_LEVEL: "info"
+  NEW_RELIC_LABELS: "Environment:production;Team:oficina-mecanica"
