--- a/k8s/api/secret.yaml.example
+++ b/k8s/api/secret.yaml.example
@@ -12,3 +12,6 @@ stringData:
   
   # JWT Secret Key (must be at least 32 characters)
   JWT_SECRET_KEY: "your-super-secret-key-must-be-at-least-32-characters-long-change-this"
+  
+  # New Relic License Key
+  NEW_RELIC_LICENSE_KEY: "YOUR_NEW_RELIC_LICENSE_KEY_HERE"
